--- a/styles.css
+++ b/styles.css
@@ -10,14 +10,14 @@
 html {
   scroll-behavior: smooth;
   font-family: var(--font-base);
-  font-size: 14pt;
+  font-size: 13pt;
   letter-spacing: 1px;
-  line-height: 1.5;
+  line-height: 1.8;
 }
 
 @media (max-width: 768px) {
   html {
-    font-size: 11pt;
+    font-size: 10pt;
   }
 }
 
@@ -97,7 +97,7 @@ a:hover {
  */
 .list {
   margin: 0;
-  padding: 0 0 0 1.5em;
+  padding: 0 0 0 2.0em;
   list-style: none;
 }
 
@@ -142,6 +142,7 @@ a:hover {
 
 .section-header {
   background-image: url(images/background.jpg);
+  background-attachment: fixed;
   background-position: center;
   background-size: cover;
   color: white;
@@ -374,7 +375,7 @@ hr {
 }
 
 .social-links a {
-  margin: 0 4px;
+  margin: 0 4px 0 0;
   text-decoration: none;
   fill: #fff;
 }
